[gd_scene load_steps=9 format=2]

[ext_resource path="res://Trail.tscn" type="PackedScene" id=1]
[ext_resource path="res://Movement.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://audio/tick.wav" type="AudioStream" id=4]
[ext_resource path="res://audio/tock.wav" type="AudioStream" id=5]
[ext_resource path="res://AssistTimer.gd" type="Script" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0 ), 0.0, 1.0, 0, 1, Vector2( 1, 1 ), 1.0, 0.0, 1, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.235294, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.0784314, 1, 1, 1, 0.67451 )

[node name="Player" type="Node"]
script = ExtResource( 3 )

[node name="Movement" parent="." instance=ExtResource( 2 )]
position = Vector2( 180, 360 )
collision_mask = 0

[node name="Trail" parent="." instance=ExtResource( 1 )]
width_curve = SubResource( 1 )
gradient = SubResource( 2 )

[node name="BlinkTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="AssistTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
script = ExtResource( 6 )

[node name="TickAudio" type="AudioStreamPlayer" parent="AssistTimer"]
stream = ExtResource( 4 )
volume_db = -4.0

[node name="TockAudio" type="AudioStreamPlayer" parent="AssistTimer"]
stream = ExtResource( 5 )
volume_db = -4.0
[connection signal="timeout" from="BlinkTimer" to="Movement" method="_on_BlinkTimer_timeout"]
[connection signal="timeout" from="AssistTimer" to="AssistTimer" method="_on_AssistTimer_timeout"]

[editable path="Movement"]
